src/examples/test-doubles/ThrowExceptionExampleTest.php.out
./tools/phpunit tests/ThrowExceptionExampleTest.php
PHPUnit 10.1.3 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.2.7

E                                                                   1 / 1 (100%)

Time: 00:00.001, Memory: 14.40 MB

There was 1 error:

1) ThrowExceptionExampleTest::testThrowExceptionStub
PHPUnit\Framework\MockObject\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ThrowExceptionExampleTest.php:9

--

There was 1 risky test:

1) ThrowExceptionExampleTest::testThrowExceptionStub
This test did not perform any assertions

/path/to/tests/ThrowExceptionExampleTest.php:6

ERRORS!
Tests: 1, Assertions: 0, Errors: 1, Risky: 1.
